--- a/products/products.css
+++ b/products/products.css
@@ -1,44 +1,47 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-:root{
-    --btn-color:#2563eb;
-    --red-color:#d946ef;
+:root {
+    --btn-color: #2563eb;
+    --btn-hover-clr:#0ea5e9;
+    --red-color: #d946ef;
 }
-body{
-    margin:0;
+
+body {
+    margin: 0;
     padding: 0;
     height: 100vh;
     box-sizing: border-box;
     background-color: var(--bg-color);
 }
 
-.app-container{
+.app-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-areas: 
-    "header header header header header "
-    "sideBar  p-display p-display p-display p-display"
-    "sideBar  p-display p-display p-display p-display"
-    "sideBar  p-display p-display p-display p-display";
-    
+    grid-template-areas:
+        "header header header header header "
+        "sideBar  p-display p-display p-display p-display"
+        "sideBar  p-display p-display p-display p-display"
+        "sideBar  p-display p-display p-display p-display";
+
 }
-.product-side-bar{
+
+.product-side-bar {
     display: flex;
     flex-direction: column;
     grid-area: sideBar;
     box-shadow: 2px 2px 2px 2px #ccc;
 }
 
-.filter-btn{
+.filter-btn {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.rangeslider{
+.rangeslider {
     width: 75%;
 }
-  
+
 .myslider {
     -webkit-appearance: none;
     background: var(--gray-color);
@@ -46,58 +49,54 @@ body{
     height: 20px;
     opacity: 2;
 }
-  
-  
+
+
 .myslider::-webkit-slider-thumb {
     -webkit-appearance: none;
     cursor: pointer;
-    background: var(--red-color)  ;
+    background: var(--red-color);
     width: 7%;
     height: 20px;
 }
-  
-  
+
+
 .myslider:hover {
     opacity: 1;
     cursor: pointer;
 }
 
-.price-range-bar{
+.price-range-bar {
     display: flex;
     justify-content: space-around;
 }
 
-.side-bar-category{
+.side-bar-category {
     display: flex;
     flex-direction: column;
     margin-left: 1.5rem;
 }
 
-.ratings{
+.ratings {
     display: flex;
     flex-direction: column;
     margin-left: 1.5rem;
 }
 
-.sort-by{
+.sort-by {
     display: flex;
     flex-direction: column;
     margin-left: 1.5rem;
 
 }
 
-.bar-heading{
+.bar-heading {
     font-size: 1rem;
     font-weight: 600;
 }
 
-#demo{
-    color: #000000;
-}
-
 /* display */
 
-.product-display{
+.product-display {
     grid-area: p-display;
     display: flex;
     flex-direction: row;
@@ -110,49 +109,49 @@ body{
 
 }
 
-.card-container{
+.card-container {
     background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     margin: 1rem;
     padding: 1rem;
-    box-shadow:2px 2px 2px 2px #ccc;
+    box-shadow: 2px 2px 2px 2px #ccc;
 }
 
-.card-img-top{
+.card-img-top {
     width: 8rem;
 }
 
-.card-btn-icon{
+.card-btn-icon {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.card-icon{
+
+.card-icon {
     -webkit-text-fill-color: var(--bg-color);
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color:var(--red-color);
+    -webkit-text-stroke-color: var(--red-color);
 }
 
-.card-icon:hover{
+.card-icon:hover {
     color: var(--red-color);
 }
 
-.btn-card{
-   background-color:var(--btn-color);
-   text-decoration: none;
-   color: white;
-   border-radius: 2%;
-   width: max-content;
-   height: max-content;
-   padding:0.5rem
+.btn-card {
+    background-color: var(--btn-color);
+    text-decoration: none;
+    color: white;
+    border-radius: 2%;
+    width: max-content;
+    height: max-content;
+    padding: 0.5rem
 }
 
-.btn-card:hover{
-    background-color:var(--btn-color);
+.btn-card:hover {
+    background-color: var(--btn-hover-clr);
 }
 
-.discount-para{
+.discount-para {
     color: var(--gray-color);
 }
-
