--- a/wishlist/wishlist.css
+++ b/wishlist/wishlist.css
@@ -1,10 +1,12 @@
 @import "./topnav.css";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+@import "./card.css";
 
 :root{
     --btn-color: #2563eb;
     --btn-hover-clr:#0ea5e9;
+    --wishlist-clr:#e11d48;
 }
 
 body{
@@ -23,62 +25,155 @@ body{
 .products-container{
     height: calc(100vh - 5rem);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     overflow-y: scroll;
+    justify-content: center;
 }
-.lists ul li{
-    list-style-type: none;
-    margin: -5%;
-    font-size:medium;
-}
+
 #title-price{
     margin: 0%;
 }
-.products-card-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
+
 
 .product-links{
     display: flex;
     flex-direction: row;
 }
-.btn-card {
-    background-color:var(--btn-color);
-    text-decoration: none;
-    color: white;
-    border-radius: 2%;
-    width: max-content;
-    height: max-content;
-    padding: 0.5rem
-}
 
-.btn-card:hover {
-    background-color: var(--btn-hover-clr);
-}
 
 .size-card{
     width: 15rem;
-    height: 15rem;
 }
-.lists ul li:hover{
-    color: var(--orange);
+
+.bi-heart-fill{
+    color: var(--wishlist-clr);
+    font-size: 1.5rem;
+    margin: 0.5rem;
 }
-.slidecontainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.lists{
-    font-weight: 300;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
 .title-price{
     position: absolute;
 }
+
+.product-card {
+    margin: 0.5rem;
+    width: 15rem;
+    height: 28rem;
+    position: relative;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  }
+  
+  .badge {
+    position: absolute;
+    left: 0;
+    top: 20px;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 700;
+    background: rgb(7, 236, 19);
+    color: rgb(226, 13, 13);
+    padding: 3px 10px;
+  }
+  
+  .product-tumb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    background: #f0f0f0;
+  }
+  .product-tumb img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  
+  .product-details {
+    padding: 5px;
+  }
+  
+  .product-catagory {
+    display: block;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 18px;
+  }
+  
+  .product-details h4 a {
+    font-weight: 600;
+    display: block;
+    margin-bottom: 18px;
+    text-transform: uppercase;
+    color: #000000;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  
+  .product-details h4 a:hover {
+    color: var(--main-color);
+  }
+  
+  .product-details p {
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 8px;
+    margin-top: -7px;
+    color: rgb(0, 0, 0);
+  }
+  
+  .product-bottom-details {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-items: flex-end;
+    overflow: hidden;
+    border-top:1px solid gray ;
+    padding-top: 1rem;
+  }
+  
+  .product-bottom-details div {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: flex-end;
+    float: left;
+    width: 50%;
+  }
+  
+  .product-price {
+    font-size: 18px;
+    color: var(--main-color);
+    font-weight: 400;
+  }
+  
+  .product-price small {
+    font-size: 80%;
+    font-weight: bold;
+    text-decoration: line-through;
+    display: inline-block;
+    margin-right: 5px;
+  }
+  
+  .product-links {
+    text-align: right;
+  }
+  
+  .product-links a {
+    display: inline-block;
+    margin-left: 5px;
+    color: #a8a8a8;
+    transition: 0.3s;
+    font-size: 35px;
+    margin-top: -16%;
+    margin-bottom: 0%;
+  }
+  
+  .product-links a:hover {
+    color: var(--main-color);
+  }
+
+  .heading-center{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
