--- a/signup/sign.css
+++ b/signup/sign.css
@@ -29,8 +29,8 @@ body{
 }
 .login-card {
   margin-top: 50%;
-  padding: 10px 40px;
-  width: 274px;
+  padding: 1rem 4rem;
+  width: 27.4rem;
   background-color: var(--card-bg-color);
   margin: 0 auto 10px;
   border-radius: 2px;
