--- a/style.css
+++ b/style.css
@@ -111,8 +111,7 @@ body {
 }
 
 .card {
-    width: 200px;
-    height: 200px;
+    width: 10rem;
     padding: 0%;
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     cursor: pointer;
