--- a/cart/cart.css
+++ b/cart/cart.css
@@ -116,7 +116,7 @@
     align-self: center;
     color: white;
     font-weight: bold;
-    padding:5px 60px;
+    padding:5px 6rem;
     outline: none;
     background-color: var(--btn-clr);
     border: none;
