--- a/cart/cart.css
+++ b/cart/cart.css
@@ -104,7 +104,7 @@
     margin-left: 5px;
     color: #a8a8a8;
     transition: 0.3s;
-    font-size: 35px;
+    font-size: 3.5rem;
     margin-top: -16%;
     margin-bottom: 0%;
   }
