feat: links added

--- a/style.css
+++ b/style.css
@@ -184,4 +184,8 @@ body {
     justify-content: space-between;
 }
 
-/*product card vertical*/
+.log-out{
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border-radius: 25%;
+}
