--- a/cart/cart.css
+++ b/cart/cart.css
@@ -114,7 +114,7 @@
   }
   .butoon-wishlist{
     align-self: center;
-    color: white;
+    /* color: white; */
     font-weight: bold;
     padding:5px 6rem;
     outline: none;
