--- a/cart/cart.css
+++ b/cart/cart.css
@@ -1,4 +1,5 @@
 @import "/topnav.css";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 :root{
     --card-details:rgb(185, 185, 185);
